--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
   color: #454545;
 }
 
+textarea::-webkit-resizer {
+  display: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
